objects/Special_Support_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Account_Bill_To_Region__c</fullName>
        <label>Account Bill-To Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Bill_To_Sub_Region__c</fullName>
        <label>Account Bill-To Sub-Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Special Support Rates</relationshipLabel>
        <relationshipName>Special_Support_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Rate__c</fullName>
        <label>Support Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Special Support Rate</label>
    <nameField>
        <label>Special Support Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Support Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>